Update swift project options

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,9 +1,3 @@
-find_package(Check)
-if(NOT CHECK_FOUND)
-    message(STATUS "'Check' unit test library not found. Skipping unit tests.")
-    return()
-endif(NOT CHECK_FOUND)
-
 add_subdirectory(common)
 
 if(libswiftnav_BUILD_TESTS)
@@ -35,8 +29,5 @@ if(libswiftnav_BUILD_TESTS)
 
   set_property(TARGET test-swiftnav-common PROPERTY C_STANDARD 99)
 
-# Add a target for running the tests. 
-  add_custom_target(run-test-swiftnav-common COMMAND test-swiftnav-common)
-# And run them upon completion.
-  add_custom_command(TARGET test-swiftnav-common POST_BUILD COMMAND test-swiftnav-common)
+  add_test(NAME test-swiftnav-common COMMAND test-swiftnav-common)
 endif(libswiftnav_BUILD_TESTS)
