Update project options

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,8 +9,8 @@ configure_file(src/max_channels.h.in max_channels.h)
 include(GNUInstallDirs)
 include(SwiftCmakeOptions)
 swift_create_project_options(
-    TESTS
-    TEST_LIBS
+    HAS_TESTS
+    HAS_TEST_LIBS
     TEST_PACKAGES "Check"
     )
 
