--- a/tests/common/CMakeLists.txt
+++ b/tests/common/CMakeLists.txt
@@ -1,3 +1,4 @@
 add_library(check-utils check_utils.c)
 target_link_libraries(check-utils swiftnav)
 set_property(TARGET check-utils PROPERTY C_STANDARD 99)
+swift_install_targets(TARGETS check-utils)
