--- a/codecov.yml
+++ b/codecov.yml
@@ -1,27 +1,13 @@
 coverage:
   status:
     project:
-      default: false      # disable the default status that measures entire project
-      tests:              # declare a new status context "tests"
-        target: 100%      # we always want 100% coverage here
-        paths: "tests/"   # only include coverage in "tests/" folder
-      libswiftnav:        # declare a new status context "libswiftnav"
-        paths: "!tests/"  # remove all files in "tests/"
+      tests:
+        target: 100%
+        paths: "tests/"
+      libswiftnav:
+        paths: "!tests/"
 
-# These are the default settings:
-#coverage:
-#  status:
-#    project:
-#      default:
-#        # basic
-#        target: auto
-#        threshold: null
-#        base: auto
-#        # advanced
-#        branches: null
-#        if_no_uploads: error
-#        if_not_found: success
-#        if_ci_failed: error
-#        only_pulls: false
-#        flags: null
-#        paths: null
+comment:
+  layout: "diff, files, footer"
+  behavior: default
+  require_changes: no
